<resources>
    <string name="app_name" translatable="false">Functional</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Functional</string>
    <string name="nav_header_subtitle">Simple tasks</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_add_task">Create</string>
    <string name="message_add_task">Create a task</string>
    <string name="action_undo">Undo</string>
    <string name="action_add_list">Create a new list</string>
    <string name="action_edit_list">Edit list</string>
    <string name="action_delete_list">Delete list</string>
    <string name="message_delete_list">Delete this task list?</string>
    <string name="action_delete">Delete</string>
    <string name="message_edit_list">Rename this list</string>
    <string name="action_save">Save</string>
    <string name="alert_list_name_empty">List name cannot be empty</string>
    <string name="alert_task_empty">Task cannot be empty</string>
    <string name="text_app_version">Version: %1$s</string>
    <string name="action_about">About</string>
    <string name="text_licenses">Open source notice</string>
    <string name="text_repo_url" translatable="false">https://jnuutinen.github.io/Functional/</string>
    <string name="menu_title_lists">Task lists</string>
    <string name="hint_task">Task</string>
    <string name="text_no_tasks">All done!</string>
    <string name="alert_task_deleted">Task deleted</string>
    <string name="hint_list_name">List name</string>
    <string name="action_select_color">Color</string>
    <string name="action_select">Select</string>
    <string name="message_select_color">Select a color</string>
    <string name="message_edit_task">Edit task</string>
    <string name="intro_message_add_task">Tap + to create a new task</string>
    <string name="intro_title_add_task">Create tasks</string>
    <string name="intro_message_delete_task">Swipe a task to delete it</string>
    <string name="intro_title_delete_task">Delete tasks</string>
    <string name="intro_message_edit_task">Tap a task to edit it</string>
    <string name="intro_title_edit_task">Edit tasks</string>
    <string name="intro_message_manage_lists">Access your task lists from the navigation drawer</string>
    <string name="action_help">Help</string>
    <string name="intro_title_manage_lists">Organize your tasks with lists</string>
    <string name="pref_title_deletion_background">Red task dismiss background</string>
    <string name="pref_description_deletion_background">When dismissing a task, show a red background and a delete icon</string>
    <string name="pref_title_default_list_name">Default list name</string>
    <string name="pref_description_default_list_name">"Set the name for the default list that is created when the last list is deleted"</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_key_deletion_background" translatable="false">deletionBackground</string>
    <string name="pref_key_default_list_name" translatable="false">defaultListName</string>
    <string name="content_description_app_image">Functional application icon</string>
    <string name="list_default_name">Tasks</string>
    <string name="action_copy_list">Copy list</string>
    <string name="intro_title_move_task">Rearrange tasks</string>
    <string name="intro_message_move_task">Drag and drop to rearrange tasks</string>
    <string name="intro_title_whats_new">New in version %1$s</string>
    <string name="alert_list_copied">List copied</string>
</resources>
