package com.github.jnuutinen.functional.ui

import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import androidx.test.platform.app.InstrumentationRegistry
import androidx.test.rule.ActivityTestRule
import com.github.jnuutinen.functional.R
import com.github.jnuutinen.functional.helper.RecyclerViewMatcher.Companion.withRecyclerView
import com.github.jnuutinen.functional.helper.TestDatabaseHelper.Companion.repopulateDb
import com.github.jnuutinen.functional.helper.TestDatabaseHelper.Companion.setActiveListSharedPref
import com.github.jnuutinen.functional.presentation.activity.TodosActivity
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@LargeTest
@RunWith(AndroidJUnit4::class)
class EditTodoTest {

    @Rule
    @JvmField
    val mActivityTestRule = object : ActivityTestRule<TodosActivity>(
        TodosActivity::class.java, false, false
    ) {
        override fun beforeActivityLaunched() {
            setActiveListSharedPref(InstrumentationRegistry.getInstrumentation().targetContext, 2)
            super.beforeActivityLaunched()
        }
    }

    @Before
    fun setUp() {
        repopulateDb()
        Thread.sleep(1000)
        mActivityTestRule.launchActivity(null)
        Thread.sleep(1000)
    }

    @Test
    fun editTodo() {
        // Edit the second to-do.
        onView(withRecyclerView(R.id.todo_recycler).atPosition(1))
            .perform(click())
        onView(withId(R.id.edit_todo_add))
            .perform(replaceText("Edited to-do"), closeSoftKeyboard())
        onView(withText(R.string.action_save))
            .perform(click())

        // The second to-do should be updated.
        onView(withRecyclerView(R.id.todo_recycler).atPosition(1))
            .check(matches(hasDescendant(withText("Edited to-do"))))
    }

    @Test
    fun editTodo_withEmptyContents() {
        // Edit the second to-do.
        onView(withRecyclerView(R.id.todo_recycler).atPosition(1))
            .perform(click())
        onView(withId(R.id.edit_todo_add))
            .perform(replaceText("  "), closeSoftKeyboard())
        onView(withText(R.string.action_save))
            .perform(click())

        // Info Snackbar should be visible.
        onView(withId(R.id.main_coordinator))
            .check(matches(hasDescendant(withText(R.string.alert_todo_empty))))

        // The second to-do should NOT be updated.
        onView(withRecyclerView(R.id.todo_recycler).atPosition(1))
            .check(matches(hasDescendant(withText("First list, second to-do"))))
    }
}